--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>pe.edu.upc</groupId>
 	<artifactId>uct-project</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>uct</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
